--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ role-tables:
 </section>
 
 <div id="people">
-    <h2>People</h2>
+    <h2>Öğretim Üyelerimiz</h2>
     {% for role-table in page.role-tables %}
         <section class="people row justify-content-between">
             {% for role-column in role-table %}
