--- a/blog.html
+++ b/blog.html
@@ -7,4 +7,16 @@ title: Blog
 {% for post in site.posts %}
     {% include news-item.html item=post %}
 {% endfor %}
+    <form action="https://www.google.com/search" method="GET" target="_blank" id="kd-google-search-cust-log" class="kutuda">
+<div class="kd-g-s-c-l-imghold">
+<img alt="Google Logo" src="https://4.bp.blogspot.com/-eyH9ZUZM90Q/V9bnY4ZoDnI/AAAAAAAA79w/3FDNE74yDFQrKAFfZmxyqx31iVugSdxKwCLcB/s1600/koddostu-g.png">
+</div>
+<input type="text" name="q" class="kd-g-s-c-l-input">
+<input value="Google'da Ara" class="kd-g-s-c-l-submit" type="submit">
+</form>
+<script src="https://www.koddostu.com/kdjs/arama.js"></script>
+<script src="https://www.koddostu.com/duzelt.js?no=369"></script>
+    <embed src="http://neoola.com/block/export/views/bu_haftaki_etknilikler-block_1" style="height:400px">
+</embed>
 </ul>
+
