--- a/people.html
+++ b/people.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: People
+title: Öğretim Görevlileri
 
 picture-role-groups:
 - {roles: [faculty, postdoc, staff], width: 4}
